--- a/index.html
+++ b/index.html
@@ -1,7 +1,22 @@
 <!DOCTYPE html>
 <html>
+<link rel="stylesheet" href="style.css" type="text/Ccss">
+
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1></h1>
+    <head>
+
+
+
+        <h1 class="test">Hello World</h1>
+
+
+
+        <p>I'm hosted with GitHub Pages.</p>
+    </head>
+
+
+
 </body>
+
 </html>
