--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" href="style.css" type="text/Ccss">
+<link rel="stylesheet" href="style.css" type="text/css">
 
 <body>
-<h1></h1>
-    <head>
 
 
+   
 
-        <h1 class="test">Hello World</h1>
+    <div class="window">
+        <div class="header">intro.txt</div>
+        <div class="notes">
+          <p>Heya! I'm Flare! or FlaringK, if you want to be formal.</p>
+          <p>I'm a programmer, mostly working on front end web tools. But I also play around with digital art from time to time.</p>
+          <p>I'm also Australian, if you ever need to contact me, my timezone is GMT + 8.</p>
+          <p>Been messing around and making stuff since 2018, hope you enjoy!</p>
+        </div>
+      </div>
 
-
-
-        <p>I'm hosted with GitHub Pages.</p>
-    </head>
 
 
 
